--- a/src/app/cointainer/featured-brands/featured-brands.component.html
+++ b/src/app/cointainer/featured-brands/featured-brands.component.html
@@ -1,6 +1,6 @@
 <div class="product-item">
     <ng-content select=".title"></ng-content>
-    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Misi voluptatibus cptate quibusdam facere. Error, ea!</p>
+    <p class="description">Lorem ipsum, dolor sit amet consectetur 
+        adipisicing elit. Molestias, recusandae? Ipsum, voluptatum?</p>
     <ng-content select=".call-to-action"></ng-content>
     </div>
